src/contrib/hive/serde/src/java/org/apache/hadoop/hive/serde2/dynamic_type/thrift_grammar.java
/* Generated By:JJTree&JavaCC: Do not edit this line. thrift_grammar.java */
package org.apache.hadoop.hive.serde2.dynamic_type;

import java.util.*;
import java.io.*;
import java.net.*;
import com.facebook.thrift.protocol.*;
import com.facebook.thrift.transport.*;
import org.apache.hadoop.hive.serde2.dynamic_type.*;

public class thrift_grammar/*@bgen(jjtree)*/implements thrift_grammarTreeConstants, thrift_grammarConstants {/*@bgen(jjtree)*/
  protected JJTthrift_grammarState jjtree = new JJTthrift_grammarState();
    private List<String> include_path = null;

    // for computing the autogenerated field ids in thrift
    private  int field_val;

    // store types and tables
    // separately because one cannot use a table (ie service.method) as a Struct like type.
    protected Map<String,DynamicSerDeSimpleNode> types;
    protected Map<String,DynamicSerDeSimpleNode> tables;

    // system include path
    final private static String default_include_path[] = {  "/usr/local/include","/usr/include","/usr/local/include/thrift/if","/usr/local/include/fb303/if" };

    // need three params to differentiate between this and 2 param method auto generated since
    // some calls in the autogenerated code use null param for 2nd param and thus ambiguous.
    protected thrift_grammar(InputStream is, List<String> include_path, boolean junk) {
        this(is,null);
        this.types = new HashMap<String,DynamicSerDeSimpleNode> () ;
        this.tables = new HashMap<String,DynamicSerDeSimpleNode> () ;
        this.include_path = include_path;
        this.field_val = -1;
    }

    // find the file on the include path
    private static File findFile(String fname, List<String> include_path) {
        for(String path: include_path) {
            final String full = path + "/" + fname;
            File f = new File(full);
            if(f.exists()) {
                return f;
            }
        }
        return null;
    }

    public static void main(String args[]) {
        String filename = null;
        List<String> include_path = new ArrayList<String>();

        for(String path: default_include_path)  {
            include_path.add(path);
        }
        for(int i = 0; i < args.length; i++) {
            String arg = args[i];
            if(arg.equals("--include") && i + 1 < args.length) {
                include_path.add(args[++i]);
            }
            if(arg.equals("--file") && i + 1 < args.length) {
                filename = args[++i];
            }
        }

        InputStream is = System.in;
        if(filename != null) {
            try {
                  is = new FileInputStream(findFile(filename, include_path));
            } catch(IOException e) {
            }
        }
        thrift_grammar t = new thrift_grammar(is,include_path,false);

          try {
            t.Start();
        } catch (Exception e) {
            System.out.println("Parse error.");
            System.out.println(e.getMessage());
            e.printStackTrace();
        }
    }

  final public SimpleNode Start() throws ParseException {
                      /*@bgen(jjtree) Start */
  DynamicSerDeStart jjtn000 = new DynamicSerDeStart(JJTSTART);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      HeaderList();
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 59:
        case 60:
          CommaOrSemicolon();
          break;
        default:
          jj_la1[0] = jj_gen;
          ;
        }
        Definition();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case tok_const:
        case tok_senum:
        case tok_typedef:
        case tok_struct:
        case tok_exception:
        case tok_service:
        case tok_enum:
        case 59:
        case 60:
          ;
          break;
        default:
          jj_la1[1] = jj_gen;
          break label_1;
        }
      }
   jjtree.closeNodeScope(jjtn000, true);
   jjtc000 = false;
    {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  final public SimpleNode HeaderList() throws ParseException {
                           /*@bgen(jjtree) HeaderList */
  DynamicSerDeHeaderList jjtn000 = new DynamicSerDeHeaderList(JJTHEADERLIST);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case tok_namespace:
        case tok_cpp_namespace:
        case tok_cpp_include:
        case tok_java_package:
        case tok_cocoa_prefix:
        case tok_csharp_namespace:
        case tok_php_namespace:
        case tok_py_module:
        case tok_perl_package:
        case tok_ruby_namespace:
        case tok_smalltalk_category:
        case tok_smalltalk_prefix:
        case tok_xsd_namespace:
        case tok_include:
          ;
          break;
        default:
          jj_la1[2] = jj_gen;
          break label_2;
        }
        Header();
      }
   jjtree.closeNodeScope(jjtn000, true);
   jjtc000 = false;
    {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  final public SimpleNode Header() throws ParseException {
                       /*@bgen(jjtree) Header */
  DynamicSerDeHeader jjtn000 = new DynamicSerDeHeader(JJTHEADER);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tok_include:
        Include();
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
    {if (true) return jjtn000;}
        break;
      case tok_namespace:
      case tok_cpp_namespace:
      case tok_cpp_include:
      case tok_java_package:
      case tok_cocoa_prefix:
      case tok_csharp_namespace:
      case tok_php_namespace:
      case tok_py_module:
      case tok_perl_package:
      case tok_ruby_namespace:
      case tok_smalltalk_category:
      case tok_smalltalk_prefix:
      case tok_xsd_namespace:
        Namespace();
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
    {if (true) return jjtn000;}
        break;
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  final public SimpleNode Namespace() throws ParseException {
                          /*@bgen(jjtree) Namespace */
  DynamicSerDeNamespace jjtn000 = new DynamicSerDeNamespace(JJTNAMESPACE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tok_namespace:
        jj_consume_token(tok_namespace);
        jj_consume_token(IDENTIFIER);
        jj_consume_token(IDENTIFIER);
  jjtree.closeNodeScope(jjtn000, true);
  jjtc000 = false;
  {if (true) return jjtn000;}
        break;
      case tok_cpp_namespace:
        jj_consume_token(tok_cpp_namespace);
        jj_consume_token(IDENTIFIER);
  jjtree.closeNodeScope(jjtn000, true);
  jjtc000 = false;
  {if (true) return jjtn000;}
        break;
      case tok_cpp_include:
        jj_consume_token(tok_cpp_include);
        jj_consume_token(tok_literal);
  jjtree.closeNodeScope(jjtn000, true);
  jjtc000 = false;
  {if (true) return jjtn000;}
        break;
      case tok_php_namespace:
        jj_consume_token(tok_php_namespace);
        jj_consume_token(IDENTIFIER);
  jjtree.closeNodeScope(jjtn000, true);
  jjtc000 = false;
  {if (true) return jjtn000;}
        break;
      case tok_py_module:
        jj_consume_token(tok_py_module);
        jj_consume_token(IDENTIFIER);
  jjtree.closeNodeScope(jjtn000, true);
  jjtc000 = false;
  {if (true) return jjtn000;}
        break;
      case tok_perl_package:
        jj_consume_token(tok_perl_package);
        jj_consume_token(IDENTIFIER);
  jjtree.closeNodeScope(jjtn000, true);
  jjtc000 = false;
  {if (true) return jjtn000;}
        break;
      case tok_ruby_namespace:
        jj_consume_token(tok_ruby_namespace);
        jj_consume_token(IDENTIFIER);
  jjtree.closeNodeScope(jjtn000, true);
  jjtc000 = false;
  {if (true) return jjtn000;}
        break;
      case tok_smalltalk_category:
        jj_consume_token(tok_smalltalk_category);
        jj_consume_token(tok_st_identifier);
  jjtree.closeNodeScope(jjtn000, true);
  jjtc000 = false;
  {if (true) return jjtn000;}
        break;
      case tok_smalltalk_prefix:
        jj_consume_token(tok_smalltalk_prefix);
        jj_consume_token(IDENTIFIER);
  jjtree.closeNodeScope(jjtn000, true);
  jjtc000 = false;
  {if (true) return jjtn000;}
        break;
      case tok_java_package:
        jj_consume_token(tok_java_package);
        jj_consume_token(IDENTIFIER);
  jjtree.closeNodeScope(jjtn000, true);
  jjtc000 = false;
  {if (true) return jjtn000;}
        break;
      case tok_cocoa_prefix:
        jj_consume_token(tok_cocoa_prefix);
        jj_consume_token(IDENTIFIER);
  jjtree.closeNodeScope(jjtn000, true);
  jjtc000 = false;
  {if (true) return jjtn000;}
        break;
      case tok_xsd_namespace:
        jj_consume_token(tok_xsd_namespace);
        jj_consume_token(tok_literal);
  jjtree.closeNodeScope(jjtn000, true);
  jjtc000 = false;
  {if (true) return jjtn000;}
        break;
      case tok_csharp_namespace:
        jj_consume_token(tok_csharp_namespace);
        jj_consume_token(IDENTIFIER);
  jjtree.closeNodeScope(jjtn000, true);
  jjtc000 = false;
  {if (true) return jjtn000;}
        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  final public SimpleNode Include() throws ParseException {
                         /*@bgen(jjtree) Include */
 DynamicSerDeInclude jjtn000 = new DynamicSerDeInclude(JJTINCLUDE);
 boolean jjtc000 = true;
 jjtree.openNodeScope(jjtn000);String fname;
 boolean found = false;
    try {
      jj_consume_token(tok_include);
      fname = jj_consume_token(tok_literal).image;
  jjtree.closeNodeScope(jjtn000, true);
  jjtc000 = false;
    // bugbug somewhat fragile below substring expression
    fname = fname.substring(1,fname.length() - 1);

    // try to find the file on the include path
    File f = thrift_grammar.findFile(fname, this.include_path);
    if(f != null) {
        found = true;
        try {
            FileInputStream fis = new FileInputStream(f);
            thrift_grammar t = new thrift_grammar(fis,this.include_path, false);
            t.Start();
            fis.close();
            found = true;
            // add in what we found to our type and table tables.
            this.tables.putAll(t.tables);
            this.types.putAll(t.types);
        } catch (Exception e) {
            System.out.println("File: " + fname + " - Oops.");
            System.out.println(e.getMessage());
            e.printStackTrace();
        }
    }
    if(!found) {
        {if (true) throw new RuntimeException("include file not found: " + fname);}
    }
    {if (true) return jjtn000;}
    } finally {
     if (jjtc000) {
       jjtree.closeNodeScope(jjtn000, true);
     }
    }
    throw new Error("Missing return statement in function");
  }

  final public SimpleNode Definition() throws ParseException {
                           /*@bgen(jjtree) Definition */
  DynamicSerDeDefinition jjtn000 = new DynamicSerDeDefinition(JJTDEFINITION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tok_const:
        Const();
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
    {if (true) return jjtn000;}
        break;
      case tok_service:
        Service();
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
    {if (true) return jjtn000;}
        break;
      case tok_senum:
      case tok_typedef:
      case tok_struct:
      case tok_exception:
      case tok_enum:
        TypeDefinition();
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
    {if (true) return jjtn000;}
        break;
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  final public SimpleNode TypeDefinition() throws ParseException {
                               /*@bgen(jjtree) TypeDefinition */
  DynamicSerDeTypeDefinition jjtn000 = new DynamicSerDeTypeDefinition(JJTTYPEDEFINITION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case tok_typedef:
        Typedef();
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
   {if (true) return jjtn000;}
        break;
      case tok_enum:
        Enum();
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
   {if (true) return jjtn000;}
        break;
      case tok_senum:
        Senum();
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
   {if (true) return jjtn000;}
        break;
      case tok_struct:
        Struct();
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
   {if (true) return jjtn000;}
        break;
      case tok_exception:
        Xception();
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
   {if (true) return jjtn000;}
        break;
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }
